force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/Apttus_Config2__InstalledProductsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Settings for the Installed Products Page in Apttus CPQ</description>
    <label>Installed Products Settings</label>
</CustomObject>