force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__AccountHierarchyBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccountHierarchyBatchSize__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Indicates the number of Account Hierarchy records processed per batch execution. Recommended value is 500. Valid values range from 1 to 2000.</description>
    <inlineHelpText>Indicates the number of Account Hierarchy records processed per batch execution. Recommended value is 500. Valid values range from 1 to 2000.</inlineHelpText>
    <label>Account Hierarchy Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>