force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__AlertAssetRelatedToRenewalCart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AlertAssetRelatedToRenewalCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display an alert when user tries to manually renew an asset associated with a system generated renewal cart</description>
    <inlineHelpText>Display an alert when user tries to manually renew an asset associated with a system generated renewal cart</inlineHelpText>
    <label>Alert Asset Related To Renewal Cart</label>
    <type>Checkbox</type>
</CustomField>