force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__AllowBackdatedTermination__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowBackdatedTermination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No (By default) - By default user cannot specify a &quot;Cancellation Date&quot; earlier than today.
Yes - User can specify cancellation date earlier than today. This may have additional impact on billing as invoice for the period may have already been generated.</description>
    <label>Allow Backdated Termination</label>
    <type>Checkbox</type>
</CustomField>