force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__AllowMassChange__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowMassChange__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Mass Change</label>
    <type>Checkbox</type>
</CustomField>