force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__ApplyAdjustmentsToCurrentContractTerm__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ApplyAdjustmentsToCurrentContractTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to keep the discounting limited to the current contract term</description>
    <inlineHelpText>Setting this indicator to true will result in the adjustments on ABO actions being applied to the current contract term only.</inlineHelpText>
    <label>Apply Adj To Current Contract Term</label>
    <type>Checkbox</type>
</CustomField>