force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__AssetSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssetSource__c</fullName>
    <description>Indicates the account source which the asset line items will be retrieved from.</description>
    <inlineHelpText>Indicates the account source which the asset line items will be retrieved from.</inlineHelpText>
    <label>Asset Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>