force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__CreateRenewalOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CreateRenewalOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a renewal opportunity should be created for system generated asset renewal quotes</description>
    <inlineHelpText>Indicates whether a renewal opportunity should be created for system generated asset renewal quotes</inlineHelpText>
    <label>Create Renewal Opportunity</label>
    <type>Checkbox</type>
</CustomField>