force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__DefaultCoterminationOption__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultCoterminationOption__c</fullName>
    <description>Default end date preference for Cotermination.</description>
    <inlineHelpText>Default end date preference for Cotermination.</inlineHelpText>
    <label>Default Cotermination Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>