force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__DefaultRenewalCoterminationOption__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultRenewalCoterminationOption__c</fullName>
    <description>Default cotermination preference during renewal.</description>
    <inlineHelpText>Default cotermination preference during renewal.</inlineHelpText>
    <label>Default Renewal Cotermination Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>