force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__DefaultRenewalPriceList__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultRenewalPriceList__c</fullName>
    <label>Default Renewal Price List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>