force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__DefaultRenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultRenewalTerm__c</fullName>
    <defaultValue>0</defaultValue>
    <description>When the value is provided use this value as the renewal term for Renewing products.  Number signifies months to renew as the end date.</description>
    <inlineHelpText>When the value is provided use this value as the renewal term for Renewing products.  Number signifies months to renew as the end date.</inlineHelpText>
    <label>Default Renewal Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>