force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__EditableFieldsForCancelledLines__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EditableFieldsForCancelledLines__c</fullName>
    <description>Comma separated list of editable asset line item fields for cancelled lines.</description>
    <inlineHelpText>Comma separated list of editable asset line item fields for cancelled lines.</inlineHelpText>
    <label>Editable Fields For Cancelled Lines</label>
    <type>TextArea</type>
</CustomField>