force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__EnableOneTimeChange__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableOneTimeChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow users to make change to one time line item.</description>
    <inlineHelpText>Allow users to make change to one time line item.</inlineHelpText>
    <label>Enable One Time Change</label>
    <type>Checkbox</type>
</CustomField>