force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__EndDatePreferencesForCotermination__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EndDatePreferencesForCotermination__c</fullName>
    <description>End Date preferences for Cotermination.</description>
    <inlineHelpText>End Date preferences for Cotermination.</inlineHelpText>
    <label>End Date preferences for Cotermination</label>
    <type>TextArea</type>
</CustomField>