force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__FilterFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FilterFields__c</fullName>
    <description>Asset Line Fields to be displayed on filter.   Works with text fields and End Date.</description>
    <inlineHelpText>Asset Line Fields to be displayed on filter.  Works with text fields and End Date.</inlineHelpText>
    <label>Filter Fields</label>
    <type>TextArea</type>
</CustomField>