force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__HideCoTerm__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideCoTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to hide co-term end date on renew</description>
    <inlineHelpText>Check to hide co-term end date on renew</inlineHelpText>
    <label>Hide Co-Term</label>
    <type>Checkbox</type>
</CustomField>