force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__MassEditActionCriteriaFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MassEditActionCriteriaFields__c</fullName>
    <description>List of comma separated asset line item field API names to enable the mass edit action</description>
    <inlineHelpText>List of comma separated asset line item field API names to enable the mass edit action</inlineHelpText>
    <label>Mass Edit Action Criteria Fields</label>
    <type>TextArea</type>
</CustomField>