force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__MaxRenewalGroupPerJob__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxRenewalGroupPerJob__c</fullName>
    <description>Max Renewal Group processed by one batch job. Used to limit the length of batch job to avoid too many running batch jobs.</description>
    <label>Max Renewal Group Per Job</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>