force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__MaxRenewalLineItemPerCart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxRenewalLineItemPerCart__c</fullName>
    <description>Max Renewal Line Item to be processed in one cart. Used to limit the size of product configuration to avoid exceeding CPU and SOQL limits.</description>
    <label>Max Renewal Line Item Per Cart</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>