force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__MaxRenewsPerTrip__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxRenewsPerTrip__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Indicates the number of renewals that are processed before a server roundtrip is required.</description>
    <inlineHelpText>To prevent CPU timeout use a smaller number. Default is 20</inlineHelpText>
    <label>Max Renews Per Trip</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>