force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__PurchaseIdentificationCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PurchaseIdentificationCriteria__c</fullName>
    <description>Identify the fields that determine the eligibility for cotermination and the cumulation of the quantity.</description>
    <inlineHelpText>List of comma separated asset line item fields that determine the eligibility for cotermination and quantity cumulation.</inlineHelpText>
    <label>Purchase Identification Criteria</label>
    <type>TextArea</type>
</CustomField>