force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__RelateActionCriteriaFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelateActionCriteriaFields__c</fullName>
    <description>List of asset line item fields separated by comma to enable relate asset action</description>
    <inlineHelpText>List of asset line item fields separated by comma to enable relate asset action</inlineHelpText>
    <label>Relate Action Criteria Fields</label>
    <type>TextArea</type>
</CustomField>