force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__RenewalBusinessObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RenewalBusinessObjectType__c</fullName>
    <description>Quote or agreement used in renewal product configuration</description>
    <label>Renewal Business Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>