force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__RenewalDefaultPriceBook__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RenewalDefaultPriceBook__c</fullName>
    <description>Default price book name used in renewal opportunity</description>
    <label>Renewal Default Price Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>