force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__RenewalExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RenewalExecutionMode__c</fullName>
    <label>Renewal Execution Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>