force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__RenewalGroupFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RenewalGroupFields__c</fullName>
    <label>Renewal Group Fields</label>
    <type>TextArea</type>
</CustomField>