force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__RenewalLeadTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RenewalLeadTime__c</fullName>
    <label>Renewal Lead Time</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>