force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__RenewOneRamp__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RenewOneRamp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Renew only one ramp line item based on the new term in order of renewal term in asset line item, default renewal term in installed product setting and selling term in asset line item.</description>
    <inlineHelpText>Renew only one ramp line item based on the new term in order of renewal term in asset line item, default renewal term in installed product setting and selling term in asset line item.</inlineHelpText>
    <label>Renew One Ramp</label>
    <type>Checkbox</type>
</CustomField>