force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__ShowAccountsFilter__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowAccountsFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display accounts filter in the installed products page</description>
    <inlineHelpText>Display accounts filter in the installed products page</inlineHelpText>
    <label>Show Accounts Filter</label>
    <type>Checkbox</type>
</CustomField>