force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__ShowServiceCoverage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowServiceCoverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether service coverage will be displayed for a primary service.</description>
    <inlineHelpText>Determines whether service coverage will be displayed for a primary service.</inlineHelpText>
    <label>Show Service Coverage</label>
    <type>Checkbox</type>
</CustomField>