force-app/main/default/objects/Apttus_Config2__InstalledProductsSettings__c/fields/Apttus_Config2__SubmenuActions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SubmenuActions__c</fullName>
    <description>List of actions to be displayed in the asset action submenu dropdowns separated by commas.</description>
    <inlineHelpText>List of actions to be displayed in the asset action submenu dropdowns separated by commas.</inlineHelpText>
    <label>Submenu Actions</label>
    <type>TextArea</type>
</CustomField>